# api-com-flask

./: README.md  app.py  db.sqlite  exemplo_env.env  pyproject.toml  render-deploy.sh
migrations/versions/: 045493887a05_initial_migration.py  68952eeb291b_add_active_attr_in_user.py  a7b9d4872320_add_password_field.py  b58c89791d5e_initial_migration.py
src/: app.py  app2.py  config.py  db.py  schema.sql  utils.py  wsgi.py
src/controllers/: auth_controller.py  role_controller.py  user_controller.py
src/models/: __init__.py  post.py  role.py  user.py
src/views/: role.py  user.py
tests/: test_utils.py
tests/integration/: conftest.py
tests/integration/controllers/: test_user.py
tests/unit/: test_utils.py
