[tool.poetry]
name = "api-com-flask"
version = "0.1.0"
description = ""
authors = ["ianlucasch <ianlucaschaves@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
flask = "^3.0.3"
flask-sqlalchemy = "^3.1.1"
flask-migrate = "^4.0.7"
flask-jwt-extended = "^4.6.0"
psycopg2-binary = "^2.9.9"
gunicorn = "^22.0.0"
flask-bcrypt = "^1.0.1"
flask-marshmallow = "^1.2.1"
marshmallow-sqlalchemy = "^1.0.0"
apispec-webframeworks = "^1.1.0"

[tool.poetry.group.dev.dependencies]
pytest = "^8.3.2"
pytest-mock = "^3.14.0"

[tool.pytest.ini_options]
minversion = "6.0"
addopts = "-vvv"
testpaths = ["tests"]

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
